[package]
name = "ry"
version = "0.1.0"
authors = ["mato"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "2.33.1"
clap = "3.0.0-beta.1"
env_logger = "0.7.1"
libc = "0.2"
log = "0.4"
pam = "0.7.0"
termion = "*"
tui = { version = "0.9.2", default-features = false, features = ["crossterm", "termion"] }
unicode-width = "0.1.7"
